# pysqlcipher

./: .clangd  .gitignore  Makefile  README.md  pyproject.toml  setup.py  sqlcipher_pyext.c  test.py
.github/workflows/: build.yml
